--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -261,7 +261,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="row">
                         <!--  Start left -->
-                        <div class="col-sm-8 col-md-8 col-lg-8">    
+                        <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8">    
                           <div class="card">
                             <div class="card-body">
                           <div class="row mb-1">
@@ -269,44 +269,44 @@
 
                               <div class="row">
                                 <div class="col">
-                                  <h5 class="detail-text">No. Master </h5>
+                                  <h5 class="detail-text text-muted">No. Master </h5>
                                   <p class="detail-text">{{detailData.Master}}</p>
                                 </div>
                               </div>
 
                               <div class="row">
                                 <div class="col">
-                                  <h5 class="detail-text">No. House </h5>
+                                  <h5 class="detail-text text-muted">No. House </h5>
                                   <p class="detail-text">{{detailData.House}}</p>
                                 </div>
                               </div>
 
                               <div class="row">
                                 <div class="col">
-                                  <h5 class="detail-text">Patente </h5>
+                                  <h5 class="detail-text text-muted">Patente </h5>
                                   <p class="detail-text">{{detailData.Patente}}</p>
                                 </div>
                               </div>
                               
                               <div class="row">
                                 <div class="col">
-                                  <h5 class="detail-text">Fecha y hora previo </h5>
+                                  <h5 class="detail-text text-muted">Fecha y hora previo </h5>
                                   <p class="detail-text">{{detailData.FechaPrevio }}</p>
                                 </div>
                               </div>
 
                             </div>
                           
-                            <div class="col-sm-8 col-mf-8 col-lg-8">
+                            <div class="col-sm-12 col-md-12 col-lg-8">
                               <div class="row">
-                                  <div class="col-sm-12 col-md-12 col-lg-8">
+                                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-8">
                                     <div class="referencia">
                                       <h5 class="detail-text">Referencia: {{detailData.Referencia}}</h5>
                                     </div>
                                   </div>
 
-                                  <div class="col-sm-12 col-md-12 col-lg-4">                                    
-                                    <h5 class="detail-text">Estatus:</h5>
+                                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">                                    
+                                    <h5 class="detail-text text-muted">Estatus:</h5>
                                     <div class="col status-filter">            
                                       <div class="status-filter__circle status-filter__circle--{{detailData.Estatus | statusPipe }}"></div>
                                       <div class="status-filter__text">
@@ -317,41 +317,41 @@
                               </div>
 
                               <div class="row">
-                                <div class="col-sm-6 col-md-6 col-lg-6">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
                                   <div class="row">
                                     <div class="col">
-                                      <h5 class="detail-text">Nombre Completo </h5>
+                                      <h5 class="detail-text text-muted">Nombre Completo </h5>
                                       <p class="detail-text">{{detailData.Nombre}} {{detailData.Paterno}} {{detailData.Materno}}</p>    
                                     </div>
                                   </div>
 
                                   <div class="row">
                                     <div class="col">
-                                      <h5 class="detail-text">Piezas </h5>
+                                      <h5 class="detail-text text-muted">Piezas </h5>
                                       <p class="detail-text">{{detailData.Piezas}}</p>
                                     </div>
                                   </div>
 
                                   <div class="row">
                                     <div class="col">
-                                      <h5 class="detail-text">Etiquetado </h5>
+                                      <h5 class="detail-text text-muted">Etiquetado </h5>
                                       <p class="detail-text">{{detailData.Etiquetado ? 'Sí' : 'No'}}</p>
                                     </div>
                                   </div>
                                 </div>
 
-                                <div class="col-sm-6 col-md-6 col-lg-6">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                                   <div class="row">
                                     <div class="col">
-                                      <h5 class="detail-text">No. Gafete </h5>
+                                      <h5 class="detail-text text-muted">No. Gafete </h5>
                                       <p class="detail-text">{{detailData.NumGafete}}</p>
                                     </div>
                                   </div>
 
                                   <div class="row">
                                     <div class="col">
-                                      <h5 class="detail-text">Peso </h5>
+                                      <h5 class="detail-text text-muted">Peso </h5>
                                       <p class="detail-text">{{detailData.Peso}} Kg</p>
                                     </div>
                                   </div>                                 
@@ -379,7 +379,7 @@
                         <!--  End left -->
               
                         <!-- Start Rigth -->
-                        <div class="col-sm-4 col-md-4 col-lg-4">
+                        <div class="col-sm-12 col-md-12 col-lg-5 col-xl-4">
                           <div class="card">
                           <div class="card-body">
                           <div class="row">
