--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -167,6 +167,20 @@ table{
     margin: 0;
 }
 
+// Detalle
+.referencia{
+    color: #212649;
+    // display: inline-block;
+    text-align: left;
+    vertical-align: middle;    
+    background-color: transparent;
+    border-bottom: 1px solid #212649;    
+    margin: 1em;    
+    width: 80%;
+}
+
+
+
 /*Select Input */
 // .styled-select {
 //     overflow: hidden;    
